# textperms

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bench.py  bench_profile.py  docker_build.sh  docker_build_container.sh
src/: logging.rs  main.rs  perms.proto  perms.rs  read_perms.rs  text.rs  write_perms.rs
