[package]
name = "textperms"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = 0
strip = true
codegen-units = 1
lto = true

[dependencies]
crossbeam = "0.8.1"
clap = {version = "3.1.5", features = ["derive"]}
quick-protobuf = "0.8.0"
num_cpus = "1.13.1"
zstd = {version = "0.10.0", features = ["zstdmt"]}
log = "0.4.14"
#tokio = {version = "1.17.0", default-features = false, features = ["sync"]}